toolchain/internal/core/analysis/testdata/errors/consts/reference_missing_enum.vdl
// @expect: E205

const defaultStatus = Status.Active
